# CourseManager-cli

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: config.rs  cycle.rs  main.rs  parser.rs  utils.rs
src/commands/: create.rs  go.rs  list.rs  mod.rs  remove.rs  summary.rs
src/cycle/: course.rs
src/models/: course.rs  cycle.rs  mod.rs  resource.rs
tests/: cycle.rs
