[package]
name = "course_manager"
version = "0.1.0"
edition = "2021"
description = "A course manager CLI written in Rust"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["derive"]}
serde = { version = "1.0.194", features = ["derive"] }
toml = "0.8.8"
homedir = "0.2.1"
