[package]
name = "course_manager"
version = "0.1.3"
edition = "2021"
description = "A CLI application to manage course folders"
repository = "https://github.com/juaquin456/CourseManager-cli.git"
license = "MIT"
categories = ["command-line-utilities", "command-line-interface"]
keywords = ["cli", "course", "manager", "folder", "organize"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["derive"]}
serde = { version = "1.0.194", features = ["derive"] }
toml = "0.8.8"
homedir = "0.2.1"
chrono = "0.4.31"